--- a/css/styles.css
+++ b/css/styles.css
@@ -5,11 +5,36 @@ body{
     color: #434455;
     font-family: "Roboto", sans-serif;
     background-color: #fff;
+    width:1158px ;
 
 }
+
+img {
+    display: block;
+}
 /*Header */
+.container {
+    width: 1158px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+.header {
+    border-bottom: 1px solid #e7e9fc;
+    
+
+}
+
+.header-container {
+    display: flex;
+
+}
 .top-line {
     background-color: #fff;
+}
+.header-nav-logo {
+    margin-right: 76px; 
+    
+
 }
 .logo {
     font-size: 18px;
@@ -19,6 +44,8 @@ body{
     line-height: 1.17;
     text-transform: uppercase;
     color: #4D5AE5;
+    text-decoration: none;
+    
 }
 .logo-studio { 
     font-size: 18px;
@@ -28,6 +55,13 @@ body{
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform:uppercase ;
+    
+}
+.header-nav {
+    display: flex;
+    align-items: center;
+    
+
 }
 .nav-menu {
     font-weight: 500;
@@ -35,23 +69,40 @@ body{
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2E2F42;
+    padding: 24px 0;
+    text-decoration: none;
+
 }  
 header nav .nav-menu:hover,
 header nav .nav-menu:active,
 header nav .nav-menu:focus {
     color: #404bbf;
 } 
+.header-nav-ul {
+    display: flex;
+    gap: 40px; 
+    list-style-type: none ; 
+}
 
-
-
+.address-ul {
+    display: flex;
+    gap: 40px;
+    list-style-type: none ; 
+    
+   
+    
+}
 .address-menu {
-    font-style: normal;   
+    font-style: normal; 
+      margin-left:332px ;
 }
 .address-mail-number {
     font-size: 16px;
     color: #434455;
     line-height: 1.5;
-    letter-spacing: 0.02em;   
+    letter-spacing: 0.02em; 
+    text-decoration: none;  
+    
 }
 
 header .address-menu .address-mail-number:hover,
@@ -59,21 +110,16 @@ header .address-menu .address-mail-number:focus,
 header .address-menu .address-mail-number:active{
     color: #404bbf;
 }
-.address-mail-number {
-    font-size: 16px;
-    color: #434455;
-    line-height: 1.5;
-    letter-spacing: 0.02em;   
-}
+
 
 /* Header - End */
 
 
 
-/* Hero İmage  */
-.hero-image {
+/*Main-Section-1*/
+.main-section-1-hero-image {
     background-color: #2E2F42;
-
+    padding: 188px 0;
 }
 .hero-image-title {
     font-size: 56px;
@@ -81,6 +127,9 @@ header .address-menu .address-mail-number:active{
     text-align: center;
     letter-spacing: 0.02em;
     color:#fff;
+    max-width: 496px;
+    margin:0 auto;
+    margin-bottom: 48px;
 }
 .hero-image-button {
     font-family: "Roboto",sans-serif;
@@ -91,38 +140,63 @@ header .address-menu .address-mail-number:active{
     line-height: 1.5;
     letter-spacing: 0.04em;
     cursor: pointer;
+    display: block;
+    margin:0 auto;
+    min-width: 169px;
+    height: 56px;
+    border: none;   
+    border-radius: 4px;
+
 }   
+
 .hero-image-button:hover {
    background-color: #404bbf;
 }
 .hero-image-button:focus {
     background-color: #404bbf;
 }
-/* Hero İmage - End */
+/* Main-Section-1 - End */
 
 
 
-/* Section 1 - Start */
-.section-l-title{
+/* Main-Section-2 - Start */
+.main-2-Section{
+    padding: 120px 0;
+
+}
+.visual-hidden {
+    visibility: hidden;
+}
+.main-section-2-ul{
+    display: flex;
+    gap: 24px;
+    list-style-type: none;
+}
+.main-section-2-ul-li {
+    width: calc((100% - 72px) / 4);
+}
+.main-section-2-title{
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2E2F42;
-   }
-.section-l-text{
+    margin-bottom: 8px;
+}
+.main-section-2-text{
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
     }
-/* Section 1 - End */
+/* Main-Section-2 - End */
 
 
 
-/* Section 2 - Start */
-.section-lll {
-    background-color: #F4F4FD;   
+/* Main-Section-3 - Start */
+.main-3-section {
+    background-color: #F4F4FD;
+    padding: 120px 0;   
 }
 .our-team-title {   
     font-size: 36px;
@@ -131,9 +205,21 @@ header .address-menu .address-mail-number:active{
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: #2E2F42;   
+    margin-bottom: 72px;
+}
+.main-section-3-ul {
+    display: flex;
+    gap:24px;
+    list-style-type: none;
+}
+.name-job { 
+    padding: 32px 0;
 }
 .name {
     background-color: #fff;
+    width: calc((100% - 72px) / 4);
+    border-radius: 0px 0px 4px 4px solid 000;
+    
 }
 .name-title {
     font-weight: 500;
@@ -141,66 +227,44 @@ header .address-menu .address-mail-number:active{
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2E2F42;
+    text-align: center;
+    margin-bottom: 8px;
 }
 .name-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455; 
+    text-align: center;
 }
-.tom-ford {
-    background-color: #fff;
-}
-.tom-ford-title {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2E2F42;
-}
-.tom-ford-text {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;   
-}
-.camila-garcia {
-    background-color: #fff;
-}
-.camila-garcia-title {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2E2F42;
-}
-.camila-garcia-text {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;   
-}
-.daniel-wilson {
-    background-color: #fff;
-}
-.daniel-wilson-title {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2E2F42;
-}
-.daniel-wilson-text {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;   
-}
-/* Section 2 - End */
+
+/* Main-Section-3 - End */
 
 
 
-/* Section 3 - Start */
+/* Main-Section-4 - Start */
+.main-4-section {
+    padding: 120px 0;
+    
+}
+.main-section-4-ul {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+    list-style-type: none;
+}
+.main-section-4-ul-li {
+    width: calc((100% - 72px) / 3);
+    
+}
+.app-category {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+    margin-bottom: 8px;
+
+}
 .our-portfolio{
     font-size: 36px;
     line-height: 1.11;
@@ -208,6 +272,7 @@ header .address-menu .address-mail-number:active{
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: #2e2f42;
+    margin-bottom: 72px;
 }
 .portfolio-title {
     font-weight: 500;
@@ -223,13 +288,14 @@ header .address-menu .address-mail-number:active{
     color: #434455;
 
 }
-/* Section 3 - End */
+/* Main-Section-4 - End */
 
 
 
 /* Footer - Start */
  .footer-section {
     background-color: #2E2F42;
+    padding: 100px 0;
 }
 .footer-studio {
     color: #F4F4FD;
@@ -239,6 +305,19 @@ header .address-menu .address-mail-number:active{
     line-height: 1.5;
     color: #F4F4FD;
     letter-spacing: 0.02em;
+    max-width: 264px;
 }
+.footer-logo {
+    font-size: 18px;
+    font-family: 'Raleway', sans-serif;
+    font-weight:700;
+    letter-spacing: 0.03em;
+    line-height: 1.17;
+    text-transform: uppercase;
+    color: #4D5AE5;
+    display: inline-block;
+    margin-bottom: 16px;
+}
+
 
 /* Footer - End */
