--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,7 @@ header nav .nav-menu:focus {
 }
 .address-menu {
     font-style: normal; 
-      margin-left:332px ;
+      margin-left:auto;
 }
 .address-mail-number {
     font-size: 16px;
