--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,21 @@ body{
     color: #434455;
     font-family: "Roboto", sans-serif;
     background-color: #fff;
+    margin: 0 auto;
+    width: 1440px;
+    border: 1px solid #000;
+}
 
-
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+p {
+  margin: 0;
+  padding: 0;
 }
 
 img {
@@ -215,14 +228,15 @@ header .address-menu .address-mail-number:active{
 .name-job { 
     padding:32px 0 ;
 
+
 }
 .name {
     background-color: #fff;
     width: calc((100% - 3 * 24px) / 4);
     border-radius: 0px 0px 4px 4px ;
-    width: 264px;
-    height: 380px;
-    
+    width: 100%;
+    height: 380px; ;
+
 }
 .name-title {
     font-weight: 500;
@@ -231,7 +245,9 @@ header .address-menu .address-mail-number:active{
     letter-spacing: 0.02em;
     color: #2E2F42;
     text-align: center;
-    margin-bottom: 8px;
+    margin: 0;
+   
+   
 }
 .name-text {
     font-size: 16px;
@@ -239,6 +255,9 @@ header .address-menu .address-mail-number:active{
     letter-spacing: 0.02em;
     color: #434455; 
     text-align: center;
+ 
+    
+   
 }
 
 /* Main-Section-3 - End */
@@ -248,28 +267,24 @@ header .address-menu .address-mail-number:active{
 /* Main-Section-4 - Start */
 .portfolio-section {
     padding: 120px 0;
-    
+    height: 1268px;
+    display: flex;
 }
 .portfolio-ul {
     display: flex;
     flex-wrap: wrap;
-    column-gap: 24px;
+     column-gap: 24px;
     row-gap: 48px;
     list-style-type: none;
 }
 .portfolio-ul-li {
-    width: calc((100% - 72px) / 3)
- 
-    
+    width: calc((100% - 48px) / 3);  
 }
 .app-category {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
-    margin-bottom: 8px;
-
-   
-
+    margin-bottom: 8px; 
 }
 .our-portfolio{
     font-size: 36px;
@@ -323,6 +338,7 @@ header .address-menu .address-mail-number:active{
     color: #4D5AE5;
     display: inline-block;
     margin-bottom: 16px;
+    text-decoration: none;
 }
 
 
