--- a/css/styles.css
+++ b/css/styles.css
@@ -33,8 +33,8 @@ img {
 }
 .header {
     border-bottom: 1px solid #e7e9fc;
-    
-
+    height: 72PX;
+    padding:24px 156px ;
 }
 
 .header-container {
