--- a/css/styles.css
+++ b/css/styles.css
@@ -176,7 +176,16 @@ header .address-menu .address-mail-number:active{
 
 }
 .visually-hidden {
-    visibility: hidden;
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
   }
 .feature-ul{
     display: flex;
@@ -283,7 +292,7 @@ header .address-menu .address-mail-number:active{
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
-    margin-bottom: 8px; 
+     
 }
 .our-portfolio{
     font-size: 36px;
@@ -300,6 +309,7 @@ header .address-menu .address-mail-number:active{
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin-bottom: 8px;
 }
 .portfolio-text {
     font-size: 16px;
